# yast-kerberos-client

./: README  yast2-kerberos-client.spec.in
agents/: cfg_afs-client.scr  cfg_openafs-client.scr  etc_krb5_conf.scr  etc_ssh_ssh_config.scr  etc_ssh_sshd_config.scr
package/: yast2-kerberos-client.changes  yast2-kerberos-client.spec
src/: Kerberos.ycp  Makefile.am  complex.ycp  dialogs.ycp  helps.ycp  kerberos-client.ycp  kerberos-client_auto.ycp  kerberos-client_proposal.ycp  kerberos-client_write.ycp  kerberos.desktop  kerberos.rnc  kerberos.y2cc  kerberos.ycp  routines.ycp  wizards.ycp
src/clients/: kerberos-client.rb  kerberos-client.ycp  kerberos-client_auto.rb  kerberos-client_auto.ycp  kerberos.rb
src/include/kerberos-client/: dialogs.rb  dialogs.ycp  wizards.rb  wizards.ycp
src/modules/: Kerberos.rb  Kerberos.ycp
testsuite/tests/: ImportExport.out  ImportExport.rb  ImportExport.ycp  Read.out  Read.rb  Read.ycp  ReadFile.out  ReadFile.ycp  ReadKrb5ConfValue.rb  ReadKrb5ConfValue.ycp  Write.out  Write.rb  Write.ycp  WriteFile.out  WriteFile.ycp  WriteKrb5ConfValue.out  WriteKrb5ConfValue.rb  WriteKrb5ConfValue.ycp
